--- a/GetApiPractice/GetApiPractice/Base.lproj/Main.storyboard
+++ b/GetApiPractice/GetApiPractice/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GetApiPractice" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,47 +16,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="75m-Tz-w3q">
-                                <rect key="frame" x="20" y="431" width="374" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8YB-EO-LvA">
+                                <rect key="frame" x="30" y="194" width="354" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="54a-2E-WKP">
-                                <rect key="frame" x="184" y="513" width="80" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ja-Xd-r2m">
+                                <rect key="frame" x="150" y="583" width="114" height="30"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="btn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cmc-2Q-UHO"/>
+                                    <action selector="Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Dy-az-qBa"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="변환된 URL :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vb7-ZQ-z2m">
-                                <rect key="frame" x="50" y="595" width="314" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wgO-63-QOE">
+                                <rect key="frame" x="40" y="375" width="334" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUN-Ry-uhi">
+                                <rect key="frame" x="40" y="476" width="334" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a7Q-Mo-zH0">
+                                <rect key="frame" x="87" y="44" width="240" height="128"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="54a-2E-WKP" firstAttribute="top" secondItem="75m-Tz-w3q" secondAttribute="bottom" constant="48" id="2nY-OS-TPj"/>
-                            <constraint firstItem="75m-Tz-w3q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Co8-tc-WOa"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="54a-2E-WKP" secondAttribute="trailing" constant="150" id="EGT-GQ-PBJ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Vb7-ZQ-z2m" secondAttribute="trailing" constant="50" id="ETH-2K-ymo"/>
-                            <constraint firstItem="Vb7-ZQ-z2m" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Qpp-BO-zbW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="75m-Tz-w3q" secondAttribute="trailing" constant="20" id="RkR-l7-3pY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="75m-Tz-w3q" secondAttribute="bottom" constant="397" id="YwK-Ge-vsI"/>
-                            <constraint firstItem="54a-2E-WKP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="184" id="bxs-Ih-OxU"/>
-                            <constraint firstItem="Vb7-ZQ-z2m" firstAttribute="top" secondItem="54a-2E-WKP" secondAttribute="bottom" constant="52" id="fGj-Jw-Tnj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1ja-Xd-r2m" secondAttribute="bottom" constant="200" id="EwV-5j-oCN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1ja-Xd-r2m" secondAttribute="trailing" constant="150" id="FcX-8h-EFy"/>
+                            <constraint firstItem="yUN-Ry-uhi" firstAttribute="top" secondItem="wgO-63-QOE" secondAttribute="bottom" constant="80" id="Ffc-QT-XEQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yUN-Ry-uhi" secondAttribute="trailing" constant="40" id="Fjt-fd-HNx"/>
+                            <constraint firstItem="a7Q-Mo-zH0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="HFw-cR-H6S"/>
+                            <constraint firstItem="wgO-63-QOE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="P2u-Da-o5H"/>
+                            <constraint firstItem="8YB-EO-LvA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Qaz-iz-DuA"/>
+                            <constraint firstItem="8YB-EO-LvA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="SMF-Hz-wm1"/>
+                            <constraint firstItem="8YB-EO-LvA" firstAttribute="top" secondItem="a7Q-Mo-zH0" secondAttribute="bottom" constant="22" id="TDc-ql-oe4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a7Q-Mo-zH0" secondAttribute="trailing" constant="87" id="UPd-WF-fuY"/>
+                            <constraint firstItem="a7Q-Mo-zH0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WpB-w0-uQr"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wgO-63-QOE" secondAttribute="trailing" constant="40" id="a09-kC-ZQO"/>
+                            <constraint firstItem="1ja-Xd-r2m" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="150" id="h9p-Mr-3Yk"/>
+                            <constraint firstItem="wgO-63-QOE" firstAttribute="top" secondItem="8YB-EO-LvA" secondAttribute="bottom" constant="147" id="iFq-un-s4G"/>
+                            <constraint firstItem="yUN-Ry-uhi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="mId-8R-XKf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8YB-EO-LvA" secondAttribute="trailing" constant="30" id="wso-Qm-JxV"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="jOR-8N-0zq"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="label" destination="Vb7-ZQ-z2m" id="KVK-ty-M0r"/>
-                        <outlet property="textField" destination="75m-Tz-w3q" id="2cm-xo-1Sd"/>
+                        <outlet property="imageView" destination="a7Q-Mo-zH0" id="xHt-rJ-mp4"/>
+                        <outlet property="orgUrlLabel" destination="wgO-63-QOE" id="TN2-TK-Mfb"/>
+                        <outlet property="shortenUrlLabel" destination="yUN-Ry-uhi" id="59x-Zr-iC0"/>
+                        <outlet property="textField" destination="8YB-EO-LvA" id="DtK-Vw-h05"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-157" y="-52"/>
+            <point key="canvasLocation" x="1826.0869565217392" y="85.714285714285708"/>
         </scene>
     </scenes>
     <resources>
