--- a/GetApiPractice/GetApiPractice/Base.lproj/Main.storyboard
+++ b/GetApiPractice/GetApiPractice/Base.lproj/Main.storyboard
@@ -3,12 +3,13 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--URL-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="AddViewController" customModule="GetApiPractice" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,69 +17,99 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8YB-EO-LvA">
-                                <rect key="frame" x="30" y="194" width="354" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ja-Xd-r2m">
-                                <rect key="frame" x="150" y="583" width="114" height="30"/>
-                                <state key="normal" title="TransForm"/>
-                                <connections>
-                                    <action selector="Button:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Dy-az-qBa"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wgO-63-QOE">
-                                <rect key="frame" x="40" y="375" width="334" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUN-Ry-uhi">
-                                <rect key="frame" x="40" y="476" width="334" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a7Q-Mo-zH0">
-                                <rect key="frame" x="87" y="44" width="240" height="128"/>
-                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="apY-Nv-2GF">
+                                <rect key="frame" x="10" y="84" width="394" height="600"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="original URL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wgO-63-QOE">
+                                        <rect key="frame" x="10" y="174" width="374" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="shorten URL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUN-Ry-uhi">
+                                        <rect key="frame" x="10" y="215" width="374" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a7Q-Mo-zH0">
+                                        <rect key="frame" x="130" y="20" width="134" height="134"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="a7Q-Mo-zH0" secondAttribute="height" multiplier="1:1" id="XEP-V2-u9X"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8YB-EO-LvA">
+                                        <rect key="frame" x="10" y="256" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="8YB-EO-LvA" secondAttribute="trailing" constant="10" id="AI8-a9-XRb"/>
+                                    <constraint firstItem="wgO-63-QOE" firstAttribute="leading" secondItem="apY-Nv-2GF" secondAttribute="leading" constant="10" id="En3-fi-vYu"/>
+                                    <constraint firstItem="yUN-Ry-uhi" firstAttribute="leading" secondItem="apY-Nv-2GF" secondAttribute="leading" constant="10" id="HXq-W1-RBo"/>
+                                    <constraint firstAttribute="trailing" secondItem="yUN-Ry-uhi" secondAttribute="trailing" constant="10" id="LVr-Zj-wVz"/>
+                                    <constraint firstAttribute="height" constant="600" id="OEi-bZ-t3y"/>
+                                    <constraint firstItem="wgO-63-QOE" firstAttribute="top" secondItem="a7Q-Mo-zH0" secondAttribute="bottom" constant="20" id="Sx4-Mo-amu"/>
+                                    <constraint firstItem="8YB-EO-LvA" firstAttribute="top" secondItem="yUN-Ry-uhi" secondAttribute="bottom" constant="20" id="THX-mk-82G"/>
+                                    <constraint firstItem="8YB-EO-LvA" firstAttribute="leading" secondItem="apY-Nv-2GF" secondAttribute="leading" constant="10" id="bma-0z-8Qj"/>
+                                    <constraint firstItem="yUN-Ry-uhi" firstAttribute="top" secondItem="wgO-63-QOE" secondAttribute="bottom" constant="20" id="ku5-qA-Xec"/>
+                                    <constraint firstItem="a7Q-Mo-zH0" firstAttribute="top" secondItem="apY-Nv-2GF" secondAttribute="top" constant="20" id="mlG-B6-Tyk"/>
+                                    <constraint firstAttribute="trailing" secondItem="a7Q-Mo-zH0" secondAttribute="trailing" constant="130" id="p1b-Qd-8HE"/>
+                                    <constraint firstAttribute="trailing" secondItem="wgO-63-QOE" secondAttribute="trailing" constant="10" id="tJW-lz-sg2"/>
+                                    <constraint firstItem="a7Q-Mo-zH0" firstAttribute="leading" secondItem="apY-Nv-2GF" secondAttribute="leading" constant="130" id="zmT-Gx-QvL"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wC0-qj-EqW">
+                                <rect key="frame" x="174.5" y="428" width="65" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b96-uG-ctB">
+                                        <rect key="frame" x="0.0" y="0.0" width="65" height="40"/>
+                                        <connections>
+                                            <action selector="getButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TBF-hB-g2m"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="b96-uG-ctB" firstAttribute="top" secondItem="wC0-qj-EqW" secondAttribute="top" id="8pB-Zh-3e4"/>
+                                    <constraint firstAttribute="width" constant="65" id="F2Z-dl-Fan"/>
+                                    <constraint firstItem="b96-uG-ctB" firstAttribute="leading" secondItem="wC0-qj-EqW" secondAttribute="leading" id="T3s-TN-8vc"/>
+                                    <constraint firstAttribute="bottom" secondItem="b96-uG-ctB" secondAttribute="bottom" id="Vz2-jm-fn9"/>
+                                    <constraint firstAttribute="height" constant="40" id="maa-ww-0Lc"/>
+                                    <constraint firstAttribute="trailing" secondItem="b96-uG-ctB" secondAttribute="trailing" id="x3s-9X-vw1"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1ja-Xd-r2m" secondAttribute="bottom" constant="200" id="EwV-5j-oCN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1ja-Xd-r2m" secondAttribute="trailing" constant="150" id="FcX-8h-EFy"/>
-                            <constraint firstItem="yUN-Ry-uhi" firstAttribute="top" secondItem="wgO-63-QOE" secondAttribute="bottom" constant="80" id="Ffc-QT-XEQ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yUN-Ry-uhi" secondAttribute="trailing" constant="40" id="Fjt-fd-HNx"/>
-                            <constraint firstItem="a7Q-Mo-zH0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="HFw-cR-H6S"/>
-                            <constraint firstItem="wgO-63-QOE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="P2u-Da-o5H"/>
-                            <constraint firstItem="8YB-EO-LvA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Qaz-iz-DuA"/>
-                            <constraint firstItem="8YB-EO-LvA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="SMF-Hz-wm1"/>
-                            <constraint firstItem="8YB-EO-LvA" firstAttribute="top" secondItem="a7Q-Mo-zH0" secondAttribute="bottom" constant="22" id="TDc-ql-oe4"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a7Q-Mo-zH0" secondAttribute="trailing" constant="87" id="UPd-WF-fuY"/>
-                            <constraint firstItem="a7Q-Mo-zH0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WpB-w0-uQr"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wgO-63-QOE" secondAttribute="trailing" constant="40" id="a09-kC-ZQO"/>
-                            <constraint firstItem="1ja-Xd-r2m" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="150" id="h9p-Mr-3Yk"/>
-                            <constraint firstItem="wgO-63-QOE" firstAttribute="top" secondItem="8YB-EO-LvA" secondAttribute="bottom" constant="147" id="iFq-un-s4G"/>
-                            <constraint firstItem="yUN-Ry-uhi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="mId-8R-XKf"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8YB-EO-LvA" secondAttribute="trailing" constant="30" id="wso-Qm-JxV"/>
+                            <constraint firstItem="apY-Nv-2GF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="8Hg-cO-LBn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="apY-Nv-2GF" secondAttribute="trailing" constant="10" id="Sd2-Js-igu"/>
+                            <constraint firstItem="apY-Nv-2GF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="WI4-jf-Dhy"/>
+                            <constraint firstItem="wC0-qj-EqW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f1t-dk-Awv"/>
+                            <constraint firstItem="wC0-qj-EqW" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wVw-Ni-qkx"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="jOR-8N-0zq"/>
+                    <tabBarItem key="tabBarItem" title="URL" id="jOR-8N-0zq">
+                        <imageReference key="image" image="network" catalog="system" symbolScale="large"/>
+                    </tabBarItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="buttonView" destination="wC0-qj-EqW" id="9Em-AK-1TO"/>
                         <outlet property="imageView" destination="a7Q-Mo-zH0" id="xHt-rJ-mp4"/>
                         <outlet property="orgUrlLabel" destination="wgO-63-QOE" id="TN2-TK-Mfb"/>
+                        <outlet property="orgView" destination="apY-Nv-2GF" id="fWH-Qd-IrW"/>
                         <outlet property="shortenUrlLabel" destination="yUN-Ry-uhi" id="59x-Zr-iC0"/>
                         <outlet property="textField" destination="8YB-EO-LvA" id="DtK-Vw-h05"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="445" y="-415"/>
+            <point key="canvasLocation" x="444.92753623188412" y="-415.17857142857139"/>
         </scene>
-        <!--Item 2-->
+        <!--BookMark-->
         <scene sceneID="FhD-U7-LqP">
             <objects>
                 <viewController id="4bh-wy-nDa" customClass="TableViewController" customModule="GetApiPractice" customModuleProvider="target" sceneMemberID="viewController">
@@ -104,7 +135,9 @@
                             <constraint firstItem="ShP-HC-V8o" firstAttribute="leading" secondItem="9xc-y6-UqJ" secondAttribute="leading" id="bvC-NO-Lce"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="U3u-FJ-Qx0"/>
+                    <tabBarItem key="tabBarItem" title="BookMark" id="U3u-FJ-Qx0">
+                        <imageReference key="image" image="bookmark.fill" catalog="system" symbolScale="large"/>
+                    </tabBarItem>
                     <connections>
                         <outlet property="bookMarkTable" destination="ShP-HC-V8o" id="wv8-iU-4BU"/>
                     </connections>
@@ -139,9 +172,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="K9N-2J-rt4" kind="relationship" relationship="viewControllers" id="EDg-B1-uUy"/>
-                        <segue destination="4bh-wy-nDa" kind="relationship" relationship="viewControllers" id="ltX-3w-dHa"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="wtD-kq-tGD"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="sWQ-P1-17M"/>
+                        <segue destination="4bh-wy-nDa" kind="relationship" relationship="viewControllers" id="qnb-aF-d6C"/>
+                        <segue destination="K9N-2J-rt4" kind="relationship" relationship="viewControllers" id="yV3-dH-QuP"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K2i-Hg-9JR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -150,6 +183,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bookmark.fill" catalog="system" width="112" height="128"/>
+        <image name="network" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
